# wide-decimal

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE_1_0.txt  Makefile  README.md  sonar-project.properties  wide_decimal.sln  wide_decimal.vcxproj  wide_decimal.vcxproj.filters  wide_decimal_vs2022.sln  wide_decimal_vs2022.vcxproj  wide_decimal_vs2022.vcxproj.filters
.gcov/make/: make_gcov_01_generic.gmk  make_gcov_02_files.gmk  make_gcov_03_flags.gmk
.github/toolchains/: gcc.cmake
.github/workflows/: CodeQL.yml  wide_decimal.yml  wide_decimal_codecov.yml  wide_decimal_sonar.yml
.tidy/make/: make_tidy_01_generic.gmk  make_tidy_02_files.gmk  make_tidy_03_flags.gmk
boost/math/bindings/: decwide_t.hpp
boost/multiprecision/detail/: check_cpp11_config.hpp  number_base.hpp
examples/: CMakeLists.txt  example000_multiply_nines.cpp  example000_multiply_nines_with_main.cpp  example000a_multiply_pi_squared.cpp  example000a_multiply_pi_squared_with_main.cpp  example001_roots_sqrt.cpp  example001_roots_sqrt_with_main.cpp  example001_sqrt.cpp  example001a_roots_seventh.cpp  example001a_roots_seventh_with_main.cpp  example001b_roots_almost_integer.cpp  example001b_roots_almost_integer_with_main.cpp  example001c_roots_sqrt_limb08.cpp  example001c_roots_sqrt_limb08_with_main.cpp  example001d_pow2_from_list.cpp  example001d_pow2_from_list_with_main.cpp  example001e_algebra_and_constexpr.cpp  example002_pi.cpp  example002_pi_with_main.cpp  example002a_pi_small_limb.cpp  example002a_pi_small_limb_with_main.cpp  example002b_pi_100k.cpp  example002b_pi_100k_with_main.cpp  example002c_pi_1meg_quint.cpp  example002c_pi_quintic.cpp  example002c_pi_quintic_with_main.cpp  example002d_pi_limb08.cpp  example002d_pi_limb08_with_main.cpp  example002d_pi_limb8.cpp  example002x_pi_control.h  example003_zeta.cpp  example003_zeta_with_main.cpp  example004_bessel_recur.cpp  example004_bessel_recur_with_main.cpp  example005_polylog_series.cpp  example005_polylog_series_with_main.cpp  example006_logarithm.cpp  example006_logarithm_with_main.cpp  example007_catalan_series.cpp  example007_catalan_series_with_main.cpp  (+23 more)
examples/mult/: fft.cc  fftmult.cc  getdigs.cc  kara.cc  karamult.cc  print.cc  print.h  speedcmp.cc  speedcmp.h  types.h
math/constants/: constants_pi_control_for_decwide_t.h
math/wide_decimal/: decwide_t.h  decwide_t_detail.h  decwide_t_detail_fft.h  decwide_t_detail_helper.h  decwide_t_detail_ops.h  decwide_t_examples.h
mcal_lcd/: mcal_lcd_base.h  mcal_lcd_console.h  mcal_lcd_generic_st7066.h
test/: CMakeLists.txt  independent_algebra_test.h  independent_algebra_test_base.h  independent_algebra_test_boost_cpp.h  independent_algebra_test_decwide_t.h  independent_algebra_test_decwide_t_base.h  independent_algebra_test_decwide_t_boost_cpp.h  independent_algebra_test_decwide_t_constants.h  independent_algebra_test_decwide_t_wide_decimal.h  independent_algebra_test_wide_decimal.h  parallel_for.h  test.cpp  test_decwide_t_algebra.cpp  test_decwide_t_algebra.h  test_decwide_t_algebra_edge.cpp  test_decwide_t_examples.cpp  test_decwide_t_examples.h  test_high_precision_exp.cpp  test_high_precision_log.cpp  test_mixed_wide_decimal_wide_integer_b2n.cpp
util/memory/: util_n_slot_array_allocator.h
util/stdcpp/: stdcpp_patch.cpp
util/utility/: util_baselexical_cast.h  util_constexpr_algorithm_unsafe.h  util_constexpr_cmath_unsafe.h  util_dynamic_array.h  util_lexical_cast.h  util_noncopyable.h  util_numeric_cast.h  util_pseudorandom_time_point_seed.h
wide_decimal/: wide_decimal.sln  wide_decimal.vcxproj.filters
wide_decimal/test/: independent_algebra_test_base.h  test.cpp  test_decwide_t_examples.cpp
wide_decimal/util/utility/: util_numeric_cast.h
