add_executable(example000a_multiply_pi_squared  example000a_multiply_pi_squared.cpp)
add_executable(example000_multiply_nines example000_multiply_nines.cpp)
add_executable(example001a_roots_seventh example001a_roots_seventh.cpp)
add_executable(example001b_roots_almost_integer example001b_roots_almost_integer.cpp)
add_executable(example001c_roots_sqrt_limb08 example001c_roots_sqrt_limb08.cpp)
add_executable(example001d_pow2_from_list example001d_pow2_from_list.cpp)
add_executable(example001_roots_sqrt example001_roots_sqrt.cpp)
add_executable(example002a_pi_small_limb example002a_pi_small_limb.cpp)
add_executable(example002b_pi_100k example002b_pi_100k.cpp)
add_executable(example002c_pi_quintic example002c_pi_quintic.cpp)
add_executable(example002d_pi_limb08 example002d_pi_limb08.cpp)
add_executable(example002_pi example002_pi.cpp)
add_executable(example003_zeta example003_zeta.cpp)
add_executable(example004_bessel_recur example004_bessel_recur.cpp)
add_executable(example005_polylog_series example005_polylog_series.cpp)
add_executable(example006_logarithm example006_logarithm.cpp)
add_executable(example007_catalan_series example007_catalan_series.cpp)
add_executable(example008_bernoulli_tgamma example008_bernoulli_tgamma.cpp)
add_executable(example009a_boost_math_standalone example009a_boost_math_standalone.cpp)
add_executable(example009b_boost_math_standalone example009b_boost_math_standalone.cpp)
add_executable(example009_boost_math_standalone example009_boost_math_standalone.cpp)
add_executable(example010a_hypergeometric_1f1 example010a_hypergeometric_1f1.cpp)
add_executable(example010_hypergeometric_2f1 example010_hypergeometric_2f1.cpp)
add_executable(example011_trig_trapezoid_integral example011_trig_trapezoid_integral.cpp)
add_executable(example012_rational_floor_ceil example012_rational_floor_ceil.cpp)
add_executable(example013a_embeddable_agm example013a_embeddable_agm.cpp)
add_executable(example013_embeddable_sqrt example013_embeddable_sqrt.cpp)

target_compile_features(example000a_multiply_pi_squared PRIVATE cxx_std_11)
target_compile_options(example000a_multiply_pi_squared PRIVATE -DWITH_MAIN=1)
target_include_directories(example000a_multiply_pi_squared PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example000a_multiply_pi_squared SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example000_multiply_nines PRIVATE cxx_std_11)
target_compile_options(example000_multiply_nines PRIVATE -DWITH_MAIN=1)
target_include_directories(example000_multiply_nines PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example000_multiply_nines SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example001a_roots_seventh PRIVATE cxx_std_11)
target_compile_options(example001a_roots_seventh PRIVATE -DWITH_MAIN=1)
target_include_directories(example001a_roots_seventh PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example001a_roots_seventh SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example001b_roots_almost_integer PRIVATE cxx_std_11)
target_compile_options(example001b_roots_almost_integer PRIVATE -DWITH_MAIN=1)
target_include_directories(example001b_roots_almost_integer PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example001b_roots_almost_integer SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})
#
# target_compile_features(example001b_roots_almost_integer PRIVATE cxx_std_11)
# target_compile_options(example PRIVATE -DWITH_MAIN=1)
# target_include_directories(example001b_roots_almost_integer PRIVATE ${PROJECT_SOURCE_DIR})
# target_include_directories(example001b_roots_almost_integer SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example001c_roots_sqrt_limb08 PRIVATE cxx_std_11)
target_compile_options(example001c_roots_sqrt_limb08 PRIVATE -DWITH_MAIN=1)
target_include_directories(example001c_roots_sqrt_limb08 PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example001c_roots_sqrt_limb08 SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example001d_pow2_from_list PRIVATE cxx_std_11)
target_compile_options(example001d_pow2_from_list PRIVATE -DWITH_MAIN=1)
target_include_directories(example001d_pow2_from_list PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example001d_pow2_from_list SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example001_roots_sqrt PRIVATE cxx_std_11)
target_compile_options(example001_roots_sqrt PRIVATE -DWITH_MAIN=1)
target_include_directories(example001_roots_sqrt PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example001_roots_sqrt SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example002a_pi_small_limb PRIVATE cxx_std_11)
target_compile_options(example002a_pi_small_limb PRIVATE -DWITH_MAIN=1)
target_include_directories(example002a_pi_small_limb PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example002a_pi_small_limb SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example002b_pi_100k PRIVATE cxx_std_11)
target_compile_options(example002b_pi_100k PRIVATE -DWITH_MAIN=1)
target_include_directories(example002b_pi_100k PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example002b_pi_100k SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example002c_pi_quintic PRIVATE cxx_std_11)
target_compile_options(example002c_pi_quintic PRIVATE -DWITH_MAIN=1)
target_include_directories(example002c_pi_quintic PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example002c_pi_quintic SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example002d_pi_limb08 PRIVATE cxx_std_11)
target_compile_options(example002d_pi_limb08 PRIVATE -DWITH_MAIN=1)
target_include_directories(example002d_pi_limb08 PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example002d_pi_limb08 SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example002_pi PRIVATE cxx_std_11)
target_compile_options(example002_pi PRIVATE -DWITH_MAIN=1)
target_include_directories(example002_pi PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example002_pi SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example003_zeta PRIVATE cxx_std_11)
target_compile_options(example003_zeta PRIVATE -DWITH_MAIN=1)
target_include_directories(example003_zeta PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example003_zeta SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example004_bessel_recur PRIVATE cxx_std_11)
target_compile_options(example004_bessel_recur PRIVATE -DWITH_MAIN=1)
target_include_directories(example004_bessel_recur PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example004_bessel_recur SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example005_polylog_series PRIVATE cxx_std_11)
target_compile_options(example005_polylog_series PRIVATE -DWITH_MAIN=1)
target_include_directories(example005_polylog_series PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example005_polylog_series SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example006_logarithm PRIVATE cxx_std_11)
target_compile_options(example006_logarithm PRIVATE -DWITH_MAIN=1)
target_include_directories(example006_logarithm PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example006_logarithm SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example007_catalan_series PRIVATE cxx_std_11)
target_compile_options(example007_catalan_series PRIVATE -DWITH_MAIN=1)
target_include_directories(example007_catalan_series PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example007_catalan_series SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example008_bernoulli_tgamma PRIVATE cxx_std_11)
target_compile_options(example008_bernoulli_tgamma PRIVATE -DWITH_MAIN=1)
target_include_directories(example008_bernoulli_tgamma PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example008_bernoulli_tgamma SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example009a_boost_math_standalone PRIVATE cxx_std_11)
target_compile_options(example009a_boost_math_standalone PRIVATE -DWITH_MAIN=1)
target_include_directories(example009a_boost_math_standalone PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example009a_boost_math_standalone SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example009b_boost_math_standalone PRIVATE cxx_std_11)
target_compile_options(example009b_boost_math_standalone PRIVATE -DWITH_MAIN=1)
target_include_directories(example009b_boost_math_standalone PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example009b_boost_math_standalone SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example009_boost_math_standalone PRIVATE cxx_std_11)
target_compile_options(example009_boost_math_standalone PRIVATE -DWITH_MAIN=1)
target_include_directories(example009_boost_math_standalone PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example009_boost_math_standalone SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example010a_hypergeometric_1f1 PRIVATE cxx_std_11)
target_compile_options(example010a_hypergeometric_1f1 PRIVATE -DWITH_MAIN=1)
target_include_directories(example010a_hypergeometric_1f1 PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example010a_hypergeometric_1f1 SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example010_hypergeometric_2f1 PRIVATE cxx_std_11)
target_compile_options(example010_hypergeometric_2f1 PRIVATE -DWITH_MAIN=1)
target_include_directories(example010_hypergeometric_2f1 PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example010_hypergeometric_2f1 SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example011_trig_trapezoid_integral PRIVATE cxx_std_11)
target_compile_options(example011_trig_trapezoid_integral PRIVATE -DWITH_MAIN=1)
target_include_directories(example011_trig_trapezoid_integral PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example011_trig_trapezoid_integral SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example012_rational_floor_ceil PRIVATE cxx_std_11)
target_compile_options(example012_rational_floor_ceil PRIVATE -DWITH_MAIN=1)
target_include_directories(example012_rational_floor_ceil PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example012_rational_floor_ceil SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example013a_embeddable_agm PRIVATE cxx_std_11)
target_compile_options(example013a_embeddable_agm PRIVATE -DWIDE_DECIMAL_STANDALONE_EXAMPLE013A_EMBEDDABLE_AGM=1)
target_include_directories(example013a_embeddable_agm PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example013a_embeddable_agm SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

target_compile_features(example013_embeddable_sqrt PRIVATE cxx_std_11)
target_compile_options(example013_embeddable_sqrt PRIVATE -DWIDE_DECIMAL_STANDALONE_EXAMPLE013_EMBEDDABLE_SQRT=1)
target_include_directories(example013_embeddable_sqrt PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(example013_embeddable_sqrt SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})

add_library(Examples
  example000a_multiply_pi_squared.cpp
  example000_multiply_nines.cpp
  example001a_roots_seventh.cpp
  example001b_roots_almost_integer.cpp
  example001c_roots_sqrt_limb08.cpp
  example001d_pow2_from_list.cpp
  example001_roots_sqrt.cpp
  example002a_pi_small_limb.cpp
  example002b_pi_100k.cpp
  example002c_pi_quintic.cpp
  example002d_pi_limb08.cpp
  example002_pi.cpp
  example003_zeta.cpp
  example004_bessel_recur.cpp
  example005_polylog_series.cpp
  example006_logarithm.cpp
  example007_catalan_series.cpp
  example008_bernoulli_tgamma.cpp
  example009a_boost_math_standalone.cpp
  example009b_boost_math_standalone.cpp
  example009_boost_math_standalone.cpp
  example010a_hypergeometric_1f1.cpp
  example010_hypergeometric_2f1.cpp
  example011_trig_trapezoid_integral.cpp
  example012_rational_floor_ceil.cpp
  example013a_embeddable_agm.cpp
  example013_embeddable_sqrt.cpp)
target_compile_features(Examples PRIVATE cxx_std_11)
target_include_directories(Examples PRIVATE ${PROJECT_SOURCE_DIR})
target_include_directories(Examples SYSTEM PUBLIC ${Boost_INCLUDE_DIRS})
